// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`change-appeal-details/local-planning-authority GET change-appeal-details/local-planning-authority should render the local planning authority page 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> Local planning authority</h1>
                                </legend>
                                <div class="govuk-radios" data-module="govuk-radios">
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="local-planning-authority" name="localPlanningAuthority"
                                        type="radio" value="3">
                                        <label class="govuk-label govuk-radios__label" for="local-planning-authority">Barnsley Metropolitan Borough Council</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="local-planning-authority-2" name="localPlanningAuthority"
                                        type="radio" value="2">
                                        <label class="govuk-label govuk-radios__label" for="local-planning-authority-2">Maidstone Borough Council</label>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`change-appeal-details/local-planning-authority POST change-appeal-details/local-planning-authority should re-render the page with an error message if required field is missing 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#local-planning-authority">Select the local planning authority.</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group govuk-form-group--error">
                            <fieldset class="govuk-fieldset" aria-describedby="local-planning-authority-error">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> Local planning authority</h1>
                                </legend>
                                <p id="local-planning-authority-error" class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Select the local planning
                                    authority.</p>
                                <div class="govuk-radios" data-module="govuk-radios">
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="local-planning-authority" name="localPlanningAuthority"
                                        type="radio" value="3">
                                        <label class="govuk-label govuk-radios__label" for="local-planning-authority">Barnsley Metropolitan Borough Council</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="local-planning-authority-2" name="localPlanningAuthority"
                                        type="radio" value="2">
                                        <label class="govuk-label govuk-radios__label" for="local-planning-authority-2">Maidstone Borough Council</label>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;
